# opengl-learn

./: .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: ccpp.yml
src/: CMakeLists.txt  blastoff.c  c3_basic.cpp  chapter-1.cpp  chapter-2.cpp  file.txt  hello.c  main.cpp  reader.cpp  shader.cpp  shader_test.cpp  test_shader  textures.cpp  triangle.c  triangle.c~
src/depth/: depth.cpp  depth.frag  depth.vert  multiple_3d.cpp
src/lighting/: CMakeLists.txt  basic.cpp
src/lighting/light/: basic.vert
src/shaders/: .tex-2.frag.swp  chapter-one.frag  chapter-one.vert  light  one-uniform.frag  tex-2.frag  tex-2.vert  tex.frag  texture.vert  two-tut.frag  two-tut.vert  two.frag  two.vert
src/triangle/: tri.cpp
